# applied-economics-dissertation

./: README.html  README.md  UntitledR.R  main.R  main.py  pyproject.toml
data/processed/: model_data.arrow
misc/: table_notes  tables_for_readme.csv
notebooks/: exploratory_analysis.qmd  modelling.qmd  table_drafts.R
reporting/: draft.md  formatted_example.qmd  formatted_example.typ  refs.bib  template.typ
src/: convert_file_format.R  data_import.R  data_processing.R  load_packages.R  model_specifications.R  utils.R
src/applied_economics_dissertation/: wrangling.py
src/features/: prepare_model_data.R  query.R  query_processing.R  read_psid_data.R
src/models/: first_differences.R  model_specifications.R  modeling.R
src/visualisation/: density_plot_caption  discontinuity_plots.R  plots.R  regression_tables.R  summary_tables.R
tests/: marriage_files.R  models.R  sample_validity.R
