[tool.poetry]
name = "applied-economics-dissertation"
version = "0.1.0"
description = ""
authors = ["gabriellob0 <g.oliveiralobo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyarrow = "^14.0.2"
polars = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
